-

    New feature: Ability to disable "Show them all" as a batching
    option. Very useful when there are many issues because showing this
    page will slow your Zope down.

    Bug fixed: Name hidden wasn't hidden on home page.

    New feature: List of issues on home page periodically refreshed
    with AJAX.

    Bug fixed: Download of dodgy emails without a To: part now skipped
    (Real#0700, thanks Jesse Perry)

    New feature: File attachment links have a rel="nofollow" now.

    New feature: Ability to hook up pre- and post scripts that are
    called before and after issues are submitted.
    http://www.issuetrackerproduct.com/Documentation/How-Tos/pre-post-SubmitIssue

    Bug fixed: Confidential issues could be seen by logged in people
    by changing their email address to an email address of someone else.
    (Real#0696, thanks NiBar)

    Bug fixed: Keyboard shortcut for comparing issues changed from 'c'
    to 'g'+'d' since the 'c' cause interference with Ctrl-C for copying.
    (Real#0697, thanks Jesse Perry)

    New feature: Skipped notifications when not dispatching on submit.
    Means that if you let a cronjob send the notifications instead of
    immediately sending them, some notifications are cancelled if the
    people who are email have already followed up. (Real#0686)
    
    Bug fixed: rss.xml and rdf.xml weren't protected by the View
    permission. (Real#0695, thanks Jesse Perry)
    
    Bug fixed: Changed default encoding from "utf8" to "utf-8" to make
    sure older IEs gets it right.

    Bug fixed: Header in CSV file for "ID" replaced by "Issue ID"
    (Real#0687)

    Bug fixed: Clairvoyant AJAX checks' interval increases now slowly as
    the page gets older.
    
    Bug fixed: Issues were uncataloged twice when deleting causing a
    harmless extra message in the event log.
    
- 0.8.3

    Bug fixed: Clairvoyant javascript alert on followups would repeat
    the same message over and over (almost blinking).
